components/platformnavigator/base/operator-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-platform-navigator-operator-to-usermgt
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: usermgmt
  ingress:
    - ports:
        - protocol: TCP
          port: 3443
      from:
        - podSelector:
            matchLabels:
              name: ibm-integration-platform-navigator-operator
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operators
  policyTypes:
    - Ingress
